* Restructured ErlangModule and added support for Erlang on Win32 * Visualiser now switches negatives on/off when f is pressed, the default is off for Erlang learner.
git-svn-id: svn://svn.code.sf.net/p/statechum/code/XMachineTool/trunk@542 4b8d0e13-f52a-0410-bc0e-8c3b9955e25a